# Astrophysics_Tools

./: .gitignore  Examples.ipynb  FindNumberOfGroups.py  MagToMass.py  README.md  Tools.py  pyproject.toml  requirements.txt
Astrophysics_Tools/: Examples.ipynb  File_Tools.py  FindNumberOfGroups.py  Function_Tools.py  Simbad_Plus.py  Tools.py  Tools.pyi  __init__.py  __init__.pyi  _version.py
