[project]
name = "Astrophysics_Tools"
description = 'Personal Astro Tools'
readme = "README.rst"
dynamic = ["version", "dependencies"] # version will come from setuptools.scm
authors = [
  { name = "Andrew James"},
]


[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "Astrophysics_Tools/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}
